# UVScanX

./: .gitignore  LICENSE  Makefile  README.md  README_UVSCANX.md  pyproject.toml  requirements.txt
data/datalog/: uvscan_ddisasm_rules.dl
data/docs/: seed_api_docs.md
data/manifests/: firmware_manifest.json
data/rag/api_usage/: dnsmasq.json  dropbear.json  libc.json  libcurl.json  libpcap.json  libupnp.json  libxml2.json  mbedtls.json  openssh.json  openssl.json  sqlite.json  synthetic.json  wolfssl.json
data/rag/documents/: README.md
data/rules/: api_rules.json
examples/synthetic/: argument_bad.s  argument_good.s  asn1_utf8_bad.s  asn1_utf8_good.s  causality_ssl_bad.s  causality_ssl_good.s  deprecated_bad.s  lifecycle_return_handle_bad.s  lifecycle_return_handle_good.s  lifecycle_wrong_handle_bad.s  mbedtls_arg_owned_bad.s  mbedtls_arg_owned_good.s  null_check_good.s  null_check_missing.s  pcap_activate_bad.s  pcap_activate_good.s  sqlite_close_bad.s  sqlite_close_good.s  sqlite_handle_bad.s  sqlite_handle_good.s  sqlite_handle_wrong_bad.s  ssl_write_bad.s  ssl_write_good.s  tls_verify_disabled.s  tls_verify_enabled.s
scripts/: build_synthetic.sh  install_local_deps.sh  install_system_deps.sh  precommit_check.sh  uvscanx
tests/: conftest.py  run_smoke.py  test_arch.py  test_elf_tpc.py  test_firmware_manifest.py  test_rag.py  test_rules.py  test_scan.py
uvscanx/: __init__.py  arch.py  binary_analysis.py  cli.py  datalog.py  deps.py  elf.py  firmware.py  llm.py  rag.py  rules.py  scanner.py  schemas.py  tpc.py  util.py
(+7 files in other folders)
